# openbrec-rf

./: .dockerignore  .gitignore  AGENTS.md  BOM.md  CODEX_MASTER_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_BOARD.md  GITHUB_PUBLISH.md  LICENSES.md  NOTICE.md  OPENBREC_RF_TECHNICAL_DESIGN.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
LICENSES/: CC-BY-SA-4.0.txt  CERN-OHL-S-2.0.txt
docs/: 01-concepto-operacional.md  02-arquitectura.md  03-antenas.md  04-validacion.md  05-seguridad-etica.md  06-roadmap.md  07-requisitos.md  08-ruview-evaluation.md  09-drone-deployment.md  10-rf-quieting.md  DOCUMENTATION_ARCHITECTURE.md  START_HERE.md  architecture.md  faq.md  glossary.md
firmware/: README.md
hardware/: drone-interface.md  drop-pod.md  rf-quiet-kit.md
migrations/: 0001_m0_disposition.sql  README.md
openbrec/: __init__.py  beacons.py  canonical.py  contracts.py  cot_export.py  disposition.py  energy.py  federation.py  fusion.py  fusion_store.py  gates_m0_04.py  gates_m0_05.py  gates_m0_06.py  integrated.py  keyring.py  messaging.py  open_spec.py  open_spec_beacons.py  open_spec_builds.py  open_spec_energy.py  open_spec_exit.py  open_spec_federation.py  open_spec_messaging.py  open_spec_transports.py  p0_exit.py  p1a_assets.py  p1a_readiness.py  postgres_disposition.py  postgres_gate.py  replay.py  rf_sensing.py  runtime.py  ruview.py  semantic.py  simulator.py  supply_chain.py  terminal.py  transports.py
schemas/: capability-manifest.schema.json  drone-deployment-event.schema.json  (+4 more)
(+845 files in other folders)
