[project]
name = "openbrec-rf"
version = "0.0.0"
description = "Offline-first evidence fusion reference platform for BREC operations"
requires-python = "==3.12.*"
dependencies = [
    "jsonschema[format]==4.26.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "datamodel-code-generator==0.37.0",
]
