[project]
name = "openbrec-rf"
version = "0.0.0"
description = "Offline-first evidence fusion reference platform for BREC operations"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "jsonschema[format]==4.26.0",
    "paho-mqtt==2.1.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "uvicorn==0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "datamodel-code-generator==0.37.0",
]
